--- a/sass/sass/include/_toggle.scss
+++ b/sass/sass/include/_toggle.scss
@@ -6,7 +6,7 @@
  display: grid;
  grid-template-columns: 1fr;
 
- position: relative;
+//  position: relative;
 
  &__header {
  
@@ -30,7 +30,7 @@
  &__content {
   position: relative;
   z-index: 59;
-  background: $bg-white;
+  // background: $bg-white;
 
  }
 
